add_subdirectory(utils)

find_package(Eigen3 REQUIRED)

add_library(${PROJECT_NAME} INTERFACE)
add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

target_link_libraries(${PROJECT_NAME}
  INTERFACE
  ${PROJECT_NAME}::utils
  Eigen3::Eigen
)

# target_compile_definitions(${PROJECT_NAME}
#   INTERFACE
#   )

set_target_properties(${PROJECT_NAME}
  PROPERTIES
  INTERFACE_${PROJECT_NAME}_VERSION ${PROJECT_VERSION}
  COMPATIBLE_INTERFACE_STRING ${PROJECT_VERSION_MAJOR}
)

# install(
#   TARGETS ${PROJECT_NAME}
#   EXPORT ${PROJECT_NAME}Core
#   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
#   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
# )

# install(
#   EXPORT ${PROJECT_NAME}Core
#   NAMESPACE ${PROJECT_NAME}::
#   DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
# )
